--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   release:
     types:
       - created
-    branches: [master]
+    branches: [st/gh-test]
 
 jobs:
   build:
@@ -14,11 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create archives
-        run: for d in ./*; do
-          if [ -d "$d" ]; then
-          zip "$d".cna $d/*
-          fi
-          done
+        run: for d in ./*; do if [ -d "$d" ]; then zip "$d".cna $d/*; fi; done
 
       - name: Upload assets
         uses: softprops/action-gh-release@v0.1.5
