--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install zip
+        run: sudo apt-get install zip
+
       - name: Create archives
-        run: for d in ./*; do
-          if [ -d "$d" ]; then
-          zip "$d".cna $d/*
-          fi
-          done
+        run: for d in ./*; do if [ -d "$d" ]; then zip "$d".cna $d/*; fi; done
 
       - name: Upload assets
         uses: softprops/action-gh-release@v0.1.5
