--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         run: sudo apt-get install zip
 
       - name: Create archives
-        run: for d in ./*; do if [ -d "$d" ]; then zip "$d".cna $d/*; fi; done
+        run: for d in ./*; do if [ -d "$d" ]; then cd "$d"; zip ../"$d".cna *; cd ..; fi; done
 
       - name: Upload assets
         uses: softprops/action-gh-release@v0.1.5
